# pipeline-test

./: README.md  app.py  cdk.json  core_stack.py  main.py  pipeline.py  pyproject.toml  stage.py
assets/SimpleLambda/: lambda_function.py
pipeline_test/: pipeline_test_stack.py
tests/unit/: test_pipeline_test_stack.py  test_simple_lambda.py
